force-app/main/default/objects/Form_Choice__c/Form_Choice__c.object-meta.xml
<CustomObject>
    <label>Form Choice</label>
    <pluralLabel>Form Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Choice Name</label>
    <type>Text</type>
</nameField>
</CustomObject>