force-app/main/default/objects/Form_Choice__c/fields/Choice_Set__c.field-meta.xml
    <CustomField>
        <fullName>Choice_Set__c</fullName>
        <label>Choice Set</label>
        <type>MasterDetail</type>
        <referenceTo>Form_Choice_Set__c</referenceTo>
        <relationshipLabel>Choices</relationshipLabel>
        <relationshipName>Choices</relationshipName>
<relationshipOrder>0</relationshipOrder>
    </CustomField>